tests/reflection/reflection.exp
Error ------------------------------------------------------------- type.js:2:19

Error: type.js:2
  2: var b: typeof a = "...";
                       ^^^^^ Cannot assign `"..."` to `b` because string [1] is incompatible with number [2].
  References:
    2: var b: typeof a = "...";
                         ^^^^^ [1]: string
    1: declare var a: number;
                      ^^^^^^ [2]: number

Error ------------------------------------------------------------- type.js:3:19

Error: type.js:3
  3: var c: typeof a = "...";
                       ^^^^^ Cannot assign `"..."` to `c` because string [1] is incompatible with number [2].
  References:
    3: var c: typeof a = "...";
                         ^^^^^ [1]: string
    1: declare var a: number;
                      ^^^^^^ [2]: number

Error ------------------------------------------------------------- type.js:6:11

Error: type.js:6
  6: var x:T = "...";
               ^^^^^ Cannot assign `"..."` to `x` because string [1] is incompatible with number [2].
  References:
    6: var x:T = "...";
                 ^^^^^ [1]: string
    6: var x:T = "...";
             ^ [2]: number


Found 3 errors
